--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
     <link rel="stylesheet" href="/index-7b695b4a6bf19de6.css">
   
-<link rel="preload" href="/index-a52e93d07adaa602_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/index-a52e93d07adaa602.js"></head>
+<link rel="preload" href="./index-a52e93d07adaa602_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="./index-a52e93d07adaa602.js"></head>
 
   <body>
 
-<script type="module">import init from '/index-a52e93d07adaa602.js';init('/index-a52e93d07adaa602_bg.wasm');</script></body></html>
+<script type="module">import init from './index-a52e93d07adaa602.js';init('./index-a52e93d07adaa602_bg.wasm');</script></body></html>
