--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <title>Yew • Counter</title>
 
-    <link rel="stylesheet" href="/index-7b695b4a6bf19de6.css">
+    <link rel="stylesheet" href="./index-7b695b4a6bf19de6.css">
   
 <link rel="preload" href="./index-a52e93d07adaa602_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
 <link rel="modulepreload" href="./index-a52e93d07adaa602.js"></head>
